# University

./: .gitignore
2/IGISIT/: отчет.doc
2/LOIS/lab1/: LOIS_lab1_report.docx  main.py
2/MOIS/: LR2.gwf  LR3.gwf
2/MOIS/cxx/cxx/weatherForecastStructureModule/: CMakeLists.txt  weatherForecastStructureModule.hpp
2/MOIS/cxx/cxx/weatherForecastStructureModule/agents/: WeatherForecastStructureAgent.cpp  WeatherForecastStructureAgent.hpp  WeatherRecommendationAgent.cpp
2/MOIS/cxx/cxx/weatherForecastStructureModule/keynodes/: StructureKeynodes.cpp  StructureKeynodes.hpp
2/PPOIS/lab1/: Budget.py  Investment.py  Report.py  Transaction.py  main.py  test_finance.py
2/PPOIS/lab2/: readme.md  tests.py  xml_handler.py
2/PPOIS/lab4_fastapi/: finance_manager_state.pkl  main.py  report.py
3/2/PBZ/: GanttPRO.htm  Lab1_report.docx  Lab2_report.docx  full.rdf  full.ttl  matematicians.ttl  philosophy.ttl  physicists.ttl  Инфографики о математиках – Figma Make.htm
3/AIPOS/1/: aipos1.docx
3/AIPOS/2/: Таблички.docx
3/AIPOS/исходники/: 2.1.4.8 Packet Tracer - Navigating the IOS.pka  (+2 more)
3/OIIS/1/: main.py  report.docx
3/OMIS/: ОМИС ЛР1.docx  ОМИС ЛР2.docx  ОМИС ЛР3.docx  ОМИС ЛР4.docx
3/PBZ/: 1.sql  2.sql
LOIS/lab1/: LOIS_lab1_report.docx  main.py
LOIS/lab2/: main.pl  отчет (2).docx
MOIS/: LR1.gwf  LR2.gwf  LR3.gwf
PPOIS/lab1/: .coverage  BankAccount.py  Budget.py  Manager.py  Save.py  finance_manager_state.pkl
PPOIS/lab2/: controller.py  main.py  model.py  readme.md  view.py
PPOIS/lab4_fastapi/: budget.py  manager.py  save.py  web_interface.py
(+248 files in other folders)
